el codigo imprime lo uqe se le pide pero gnera un error desconocido

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "istrategy.h": "c"
+        "istrategy.h": "c",
+        "stdlib.h": "c",
+        "context.h": "c"
     }
 }
